# rust-stm32g431

./: Cargo.toml  Makefile  README.md  memory.x
src/: main.rs
