[package]
name = "rust-stm32g431"
version = "0.1.0"
authors = ["Luz"]
description = "Blinking example for STM32G431RB Nucleo Board written in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Luz/rust-stm32g431"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.1"
cortex-m = "0.7.4"

defmt = "0.3.0"
defmt-rtt = "0.3.0"

stm32-hal2 = {version = "^1.4.5", features = ["g431", "g4rt"]}

panic-halt = "0.2.0"

nb = "1.0.0"

